--- a/TD4m_Emulator/TD4m_Emulator.vcxproj.filters
+++ b/TD4m_Emulator/TD4m_Emulator.vcxproj.filters
@@ -39,11 +39,11 @@
     <ClInclude Include="Commands\Commands.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="UI\Main.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="UI\MainWindow.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\Main.cpp">
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
